So close to finalization. Tables are still problematic.

--- a/isiefinal/isieref.bib
+++ b/isiefinal/isieref.bib
@@ -964,20 +964,23 @@ url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7061441},
 volume = {51},
 year = {2015}
 }
-@article{Lambert2015b,
-abstract = {The space and packaging constraints for various electric transport applications such as for electric and hybrid electric vehicles or mass transit systems ultimately require that electronic and mechanical subsystems become more fully integrated. This paper outlines the current state of art for the power electronic converter technologies which enables greater integration in electric drives. Investigations into the supply options, state of the art devices, switching frequency selection, filtering requirements and system modularity options are explored and future trends are discussed.},
-author = {Lambert, Simon M. and Mecrow, Barrie C. and Abebe, Robert and Vakil, Gaurang and Johnson, C. Mark},
-doi = {10.1109/VPPC.2015.7352967},
-file = {:E$\backslash$:/mendeley/Lambert et al/IEEE Vehicle Power and Propulsion Conference/Lambert et al. - 2015 - Integrated Drives for Transport - A Review of the Enabling Electronics Technology(3).pdf:pdf},
-isbn = {978-1-4673-7637-2},
-journal = {IEEE Vehicle Power and Propulsion Conference},
-keywords = {Actuators,IMMD,Power electronics,Power harmonic filters,Rectifiers,Standards,Topology,Variable speed drives,electric drive integration,electric drives,electric transport application,electric vehicles,electronic subsystem,electronics technology,filtering requirement,mechanical subsystem,packaging constraint,power electronic converter technology,power electronics,space constraint,switching convertors,switching frequency selection,system modularity option,thermal},
-mendeley-tags = {IMMD,thermal},
-pages = {1--6},
-title = {{Integrated Drives for Transport - A review of the enabling thermal management technology}},
-url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7352967},
-year = {2015}
-}
+
+
+
+
+@INPROCEEDINGS{7352968,
+author={S. M. Lambert and B. C. Mecrow and R. Abebe and G. Vakil and C. M. Johnson},
+booktitle={2015 IEEE Vehicle Power and Propulsion Conference (VPPC)},
+title={Integrated Drives for Transport - A Review of the Enabling Thermal Management Technology},
+year={2015},
+pages={1-6},
+keywords={electric drives;thermal management (packaging);transportation;electric drive;electronic subsystem integration;mechanical subsystem integration;thermal management technology;transport application;Actuators;Cooling;Drives;Electronic packaging thermal management;Power electronics;Thermal management},
+doi={10.1109/VPPC.2015.7352968},
+month={Oct},}
+
+
+
+
 @article{Calzo2016,
 author = {Calzo, Lo},
 file = {:E$\backslash$:/mendeley/Calzo/Unknown/Calzo - 2016 - Mecrow , Barrie ( 2016 ) Integrated motor drives state of the art and future trends . IET Electric Power Applications.pdf:pdf},
